fix : 링크 연결 안되는 오류 해결
경로 설정이 다르게 되어 있었음

--- a/sub_PrivacyPolicy.html
+++ b/sub_PrivacyPolicy.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/sub_media.css">
     <!-- 외부 JS 링크 -->
-    <script src="../js/common.js"></script>
-    <script src="../js/dataList.js"></script>
-    <script src="../js/linksys.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/dataList.js"></script>
+    <script src="./js/linksys.js"></script>
 </head>
 <body class="scbar">
     <!-- 1. 상단 영역 -->
