--- a/sub_RejectionEmail.html
+++ b/sub_RejectionEmail.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/sub_media.css">
     <!-- 외부 JS 링크 -->
-    <script src="../js/common.js"></script>
-    <script src="../js/dataList.js"></script>
-    <script src="../js/linksys.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/dataList.js"></script>
+    <script src="./js/linksys.js"></script>
 </head>
 <body class="scbar">
     <!-- 1. 상단 영역 -->
