--- a/sub_seoulMarketDining.html
+++ b/sub_seoulMarketDining.html
@@ -12,8 +12,8 @@
     <!-- 미디어쿼리 CSS 링크 -->
     <link rel="stylesheet" href="./css/media.css">
     <!-- 외부 JS 링크 -->
-    <script src="../js/common.js"></script>
-    <script src="../js/linksys.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/linksys.js"></script>
 </head>
 <body class="scbar">
     <!-- 1. 상단 영역 -->
