--- a/sub_seoulRestaurantWeek.html
+++ b/sub_seoulRestaurantWeek.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/sub_media.css">
     <!-- 외부 JS 링크 -->
-    <script src="../js/common.js"></script>
-    <script src="../js/linksys.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/linksys.js"></script>
 </head>
 <body class="scbar">
     <!-- 1. 상단 영역 -->
