fix : 이미지 안 뜨는 문제 수정
이미지의 경로 수정

--- a/sub_seoulMarché.html
+++ b/sub_seoulMarché.html
@@ -256,20 +256,20 @@
                 <div class="categoryTxtBx">
                     <ol class="marcheList">
                         <li>
-                            <img src="../assets/images/07.서브페이지-도시와_농부의_맛남/program2022-cont4-step1.jpg" alt="여러 채소 사진">
+                            <img src="./assets/images/07.서브페이지-도시와_농부의_맛남/program2022-cont4-step1.jpg" alt="여러 채소 사진">
                             예술과 문화가 어우러지는 시장에서 로컬의 <br>
                             재료를 사용한 세계음식을 선보이며, 이를 통해 <br>
                             시민들에게 건강하고 즐거운 식경험을 제공합니다.
                         </li>
                         <li>
-                            <img src="../assets/images/07.서브페이지-도시와_농부의_맛남/program2022-cont4-step2.jpg" alt="당근이 담긴 봉지를 들고 있는 손 사진">
+                            <img src="./assets/images/07.서브페이지-도시와_농부의_맛남/program2022-cont4-step2.jpg" alt="당근이 담긴 봉지를 들고 있는 손 사진">
                             농부시장과 연계하여 제철재료에 대한 시민들의 <br>
                             이해를 높여줍니다. 또한 셰프와 농부들의 협업 관계를 <br>
                             증진하고 로컬 농부와 요리사들과 시민참여에 기초한 <br>
                             미식축제의 가능성을 모색합니다.
                         </li>
                         <li>
-                            <img src="../assets/images/07.서브페이지-도시와_농부의_맛남/program2022-cont4-step3.jpg" alt="화분을 들고 있는 손 사진">
+                            <img src="./assets/images/07.서브페이지-도시와_농부의_맛남/program2022-cont4-step3.jpg" alt="화분을 들고 있는 손 사진">
                             도시민 및 서울 체류 외국인들에게 지구를 생각하는 <br>
                             지속가능한 식문화에 대한 경험의 기회를 제공합니다.
                         </li>
