--- a/sub_seoulMarketDining.html
+++ b/sub_seoulMarketDining.html
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </main>
-        <div class="bgi1"><img src="../assets/images/06.서브페이지-재래시장과_핫플의_맛남/program2022-cont3-bg1.jpg" alt="재래시장과 핫플의 맛남 이벤트 관련 이미지"></div>
+        <div class="bgi1"><img src="./assets/images/06.서브페이지-재래시장과_핫플의_맛남/program2022-cont3-bg1.jpg" alt="재래시장과 핫플의 맛남 이벤트 관련 이미지"></div>
     </div>
 
 
