--- a/sub_seoulRestaurantWeek.html
+++ b/sub_seoulRestaurantWeek.html
@@ -257,7 +257,7 @@
                     <section class="weekList">
                         <ul class="program-list3">
                             <li class="listBxDesign sub_week">
-                                <img src="../assets/images/05.서브페이지-특별_메뉴로의_초대/program2022-cont2-img1-1.jpg" alt="서울 레스토랑 위크 이미지 1">
+                                <img src="./assets/images/05.서브페이지-특별_메뉴로의_초대/program2022-cont2-img1-1.jpg" alt="서울 레스토랑 위크 이미지 1">
                                 <article class="inf">
                                     <strong>Korean Spirit 한국인의 혼을 담은 미식과 칵테일의 만남:</strong>
                                     <p class="colRed big">2022년 10월 1일 (토), 17:30/18:00/18:30</p>
@@ -288,7 +288,7 @@
                                 </article>
                             </li>
                             <li class="listBxDesign sub_week">
-                                <img class="nonDisplay" src="../assets/images/05.서브페이지-특별_메뉴로의_초대/program2022-cont2-img1-2.jpg" alt="서울 레스토랑 위크 이미지 2">
+                                <img class="nonDisplay" src="./assets/images/05.서브페이지-특별_메뉴로의_초대/program2022-cont2-img1-2.jpg" alt="서울 레스토랑 위크 이미지 2">
                                 <article class="inf">
                                     <strong>Korean French 한국 식재료의 재발견:</strong>
                                     <p class="colRed big">2022년 10월 2일 (일), 17:30/18:00/18:30</p>
@@ -312,7 +312,7 @@
                                         </li>
                                     </ul>
                                 </article>
-                                <img class="display" src="../assets/images/05.서브페이지-특별_메뉴로의_초대/program2022-cont2-img1-2.jpg" alt="서울 레스토랑 위크 이미지 2">
+                                <img class="display" src="./assets/images/05.서브페이지-특별_메뉴로의_초대/program2022-cont2-img1-2.jpg" alt="서울 레스토랑 위크 이미지 2">
                             </li>
                         </ul>
                     </section>
