--- a/sub_eventInfo.html
+++ b/sub_eventInfo.html
@@ -33,12 +33,12 @@
                             </a>
                 
                             <!-- (1-1) 로고 주변 원 -->
-                            <div class="circleList">
-                                <div class="circle cr1"></div>
-                                <div class="circle cr2"></div>
-                                <div class="circle cr3"></div>
-                                <div class="circle cr4"></div>
-                            </div>
+                            <span class="circleList">
+                                <span class="circle cr1"></span>
+                                <span class="circle cr2"></span>
+                                <span class="circle cr3"></span>
+                                <span class="circle cr4"></span>
+                            </span>
                         </h1>
                 
                         <!-- (2) 기타 -->
